[tool.poetry]
name = "ktest"
version = "0.1.0"
description = ""
authors = ["Bartosz Sypniewski <pajhiwo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
behave = "^1.2.6"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
